Fix wrong docs for update and delete token
